<resources>
    <string name="2131755010">false</string>
    <string name="2131755013">A PO Box number is required.</string>
    <string name="2131755015">true</string>
    <string name="2131755016">true</string>
    <string name="2131755017">Please tell us how many flat tires you have.</string>
    <string name="2131755018">Take Me to My Quote</string>
    <string name="2131755020">Cancel</string>
    <string name="2131755021">Continue</string>
    <string name="2131755022">This application requires the latest version of ARCore.</string>
    <string name="2131755023">This feature requires the latest version of ARCore.</string>
    <string name="2131755024">Installing ARCore…</string>
    <string name="2131755026">a driver</string>
    <string name="2131755027">A GEICO Representative will assist you with your towing options when they call to confirm your request.</string>
    <string name="2131755028">Navigate home</string>
    <string name="2131755029">Navigate up</string>
    <string name="2131755030">More options</string>
    <string name="2131755031">Done</string>
    <string name="2131755032">See all</string>
    <string name="2131755033">Choose an app</string>
    <string name="2131755034">OFF</string>
    <string name="2131755035">ON</string>
    <string name="2131755036">sans-serif</string>
    <string name="2131755037">sans-serif-medium</string>
    <string name="2131755038">sans-serif-medium</string>
    <string name="2131755039">sans-serif</string>
    <string name="2131755040">sans-serif</string>
    <string name="2131755041">sans-serif</string>
    <string name="2131755042">sans-serif</string>
    <string name="2131755043">sans-serif-light</string>
    <string name="2131755044">sans-serif</string>
    <string name="2131755045">sans-serif</string>
    <string name="2131755046">sans-serif</string>
    <string name="2131755047">sans-serif-medium</string>
    <string name="2131755048">Search…</string>
    <string name="2131755049">Clear query</string>
    <string name="2131755050">Search query</string>
    <string name="2131755051">Search</string>
    <string name="2131755052">Submit query</string>
    <string name="2131755053">Voice search</string>
    <string name="2131755054">Share with</string>
    <string name="2131755055">Share with %s</string>
    <string name="2131755056">Collapse</string>
    <string name="2131755060">Access them any time in the app.</string>
    <string name="2131755063">Account Info</string>
    <string name="2131755068">Continue</string>
    <string name="2131755069">help</string>
    <string name="2131755070">Settings</string>
    <string name="2131755072">Make This Driver Active</string>
    <string name="2131755075">Add</string>
    <string name="2131755076">Add Additional Photos</string>
    <string name="2131755079">Add New Payment Method</string>
    <string name="2131755081">Add to Contacts</string>
    <string name="2131755083">Additional</string>
    <string name="2131755085">y</string>
    <string name="2131755086">Address copied</string>
    <string name="2131755087">For any questions please contact:</string>
    <string name="2131755091">Alert</string>
    <string name="2131755092">"Align Driver's License Barcode within the rectangular scan area and hold steady."</string>
    <string name="2131755093">Align VIN barcode within the rectangular scan area and hold your device steady.</string>
    <string name="2131755105">An analyst is reviewing your response for possible improvements to our Mobile App Experience.</string>
    <string name="2131755109">an operator</string>
    <string name="2131755110">Normal Animation</string>
    <string name="2131755111">Answers to security questions cannot contain special characters.</string>
    <string name="2131755112">Please enter a valid answer for question #1.</string>
    <string name="2131755113">Please enter a valid answer for question #2.</string>
    <string name="2131755116">App Exclusive</string>
    <string name="2131755117">GEICO Mobile</string>
    <string name="2131755120">Got It</string>
    <string name="2131755121">Enable Location</string>
    <string name="2131755128">Library</string>
    <string name="2131755129">app_name</string>
    <string name="2131755130">auth</string>
    <string name="2131755131">Applications</string>
    <string name="2131755132">1.0</string>
    <string name="2131755133">app_version</string>
    <string name="2131755134">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="2131755139">Are you sure?</string>
    <string name="2131755141">Ask Kate</string>
    <string name="2131756180">" "<b>Accessories coverage</b>" provides protection for your accessories. You must, however, carry comprehensive or collision coverage on your policy. Accessories may include: saddlebags, backrests, seats, chrome pieces and CB radios. If needed, additional coverage can be purchased. Collision coverage provides protection for your helmet as well. (Coverage amounts vary by state.) "</string>
    <string name="2131756182">" "<b>"You're active on social media."</b>" Someone might claim that your social media post is false and damaging to their reputation. They could sue you for libel. "</string>
    <string name="2131756185">" "<b>Bodily injury liability</b>" Coverage insures you against certain damages if you injure or kill someone while operating your motorcycle and also provides you with a legal defense if another party in the accident files a lawsuit against you. We have multiple limits of protection from which to choose. "</string>
    <string name="2131756188">" "<b>Broad coverage for damage</b>" to your house and any permanent structures on your property (unless the cause of the damage is specifically excluded in your policy). "</string>
    <string name="2131756195">" "<b>Collision coverage</b>" pays for covered damage to your motorcycle when it hits, or is hit by, another vehicle. "</string>
    <string name="2131756198">" "<b>You commute through high-traffic areas.</b>" After a multi-car accident, you might have to pay for injuries to several drivers. "</string>
    <string name="2131756200">" "<b>Comprehensive physical damage coverage</b>" pays for covered losses resulting from incidents other than collision, such as theft, fire or vandalism. "</string>
    <string name="2131756202">Umbrella insurance can <b>cover situations and expenses that your other policies might not</b>", like the cost of your legal defense. "</string>
    <string name="2131756205">Coverage for <b>personal liability</b>" exposures that arise from being a homeowner. "</string>
    <string name="2131756213">Damage to your <b>personal property</b>" due to causes specified in your policy. (Yep, it's those \"named peril\" again!) "</string>
    <string name="2131756216">" "<b>"You live in a region that's prone to dangerous weather."</b>" Snow and ice can cause major accidents. "</string>
    <string name="2131756218">" "<b>"Nobody's safe from accidents or lawsuits."</b>" If someone slips and falls in your home, they could sue you.

You're at a "<b>higher risk</b>" for accidents or lawsuits if: "</string>
    <string name="2131756230"><b>"Umbrella insurance can kick in after you've reached the limits on your other policies."</b>"

Imagine that you injure another driver in a car accident. They sue you for $500,000 in medical bills and lost wages. But your auto policy only covers up to $300,000.

An umbrella policy could "<b>cover the additional $200,000—</b>"and help save you from financial hardship. "</string>
    <string name="2131756236">Limited coverage—usually $500 - $2,000—for <b>jewelry stolen</b>" from your home. (Most policies don't cover lost jewelry.) If you need greater coverage for your prized collection, you might need a homeowners policy endorsement. "</string>
    <string name="2131756240">" "<b>Medical payments, no-fault or personal injury protection</b>" coverage provide medical coverage for yourself and your passengers. You may select medical coverage in most states. "</string>
    <string name="2131756243">" "<b>"You're near retirement."</b>" Your savings may make you a target for lawsuits. "</string>
    <string name="2131756247"><b>Please note:</b>"
The above is meant as general information and as general policy descriptions to help you understand the different types of coverages.

These descriptions do not refer to any specific contract of insurance and they do not modify any definitions, exclusions or any other provision expressly stated in any contracts of insurance.

We encourage you to speak to your insurance representative and to read your policy contract to fully understand your coverages. "</string>
    <string name="2131756251">" "<b>Property damage liability coverage</b>" insures you against certain damages caused to someone else's property while operating your motorcycle and provides you with a legal defense for such claims if another party files a lawsuit against you. We have multiple limits of protection from which to choose. "</string>
    <string name="2131756256">"these are the kinds of threats that might cause you to lose sleep, if you didn't have the protection of homeowners insurance coverage. Fortunately, a homeowners policy will cover "<b> damage to your home </b>" and personal property due to a variety of causes (called \"named peril\" in insurance lingo). The personal liability portion of a homeowners policy provides coverage, for example if your litigious brother-in-law slips down your steps on a rainy day and injures himself.

Each homeowners insurance policy offers different protection, but standard policies usually provide: "</string>
    <string name="2131756261">Umbrella insurance offers a <b>high overall value</b>". It can add $1 million* in coverage to several policies. "</string>
    <string name="2131756263">" "<b>Uninsured/Underinsured motorist coverage</b>" pays for injuries caused by an uninsured driver in a crash that is not your fault. "</string>
    <string name="2131756271">Umbrella insurance can give you <b>$1 million* in coverage on top of your auto and homeowners policies. </b>" An umbrella policy pays out to other people if you accidentally injure them or damage their property.

Umbrella insurance "<b>could save you from losing your home or going into debt</b>" in case of a major liability claim. "</string>
    <string name="2131756281">Without an umbrella policy, <b>you could lose your home</b>" and savings if you're involved in a major claim. "</string>
    <string name="2131756283">" "<b>You have young drivers on your auto policy.</b>" Worried when you turn the car keys over to your teenager? "</string>
    <string name="2131757293">Urban Airship Channel</string>
    <string name="2131757309">Accept</string>
    <string name="2131757310">Add</string>
    <string name="2131757311">Add to Calendar</string>
    <string name="2131757312">Book Now</string>
    <string name="2131757313">Buy Now</string>
    <string name="2131757314">Copy</string>
    <string name="2131757315">Decline</string>
    <string name="2131757316">Dislike</string>
    <string name="2131757317">Download</string>
    <string name="2131757318">Follow</string>
    <string name="2131757319">Less Like This</string>
    <string name="2131757320">Like</string>
    <string name="2131757321">More Like This</string>
    <string name="2131757322">No</string>
    <string name="2131757323">Opt-in</string>
    <string name="2131757324">Opt-out</string>
    <string name="2131757325">Rate Now</string>
    <string name="2131757326">Remind Me Later</string>
    <string name="2131757327">Save</string>
    <string name="2131757328">Search</string>
    <string name="2131757330">Share</string>
    <string name="2131757331">Shop Now</string>
    <string name="2131757332">Tell Me More</string>
    <string name="2131757333">Unfollow</string>
    <string name="2131757334">Yes</string>
    <string name="2131757336">Open</string>
</resources>