<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout gravity="top" orientation="vertical" layout_width="fill_parent" layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView id="@id/2131296272" padding="24.0dip" layout_width="fill_parent" layout_height="wrap_content" text="@string/2131755022" />
    <LinearLayout gravity="end" orientation="horizontal" padding="4.0dip" layout_width="fill_parent" layout_height="fill_parent">
        <Button id="@id/2131296270" layout_width="wrap_content" layout_height="wrap_content" text="@string/2131755020" style="@android:style/Widget.Material.Light.Button.Borderless.Colored" />
        <Button id="@id/2131296271" layout_width="wrap_content" layout_height="wrap_content" text="@string/2131755021" style="@android:style/Widget.Material.Light.Button.Borderless.Colored" />
    </LinearLayout>
</android.widget.LinearLayout>